# deepak-dev

./: .gitignore  README.md
.claude/: instructions.md  plan.md  workflow.md
backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  main.py  models.py  schema.json
backend/app/api/: routes.py
backend/app/prompts/: test_case_generation.md
backend/app/services/: openai_client.py  test_case_generator.py
backend/tests/: conftest.py  test_api.py  test_generator.py  test_schema_sync.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ErrorBanner.tsx  ExportButton.tsx  TestCaseResults.tsx  UserStoryInput.tsx
frontend/src/lib/: api.ts  types.ts
